fix(accordion): arrow not centered (#624)
✅ Closes: COMUI-3120

--- a/packages/genesys-spark-components/src/components/stable/gux-accordion/gux-accordion-section/gux-accordion-section.scss
+++ b/packages/genesys-spark-components/src/components/stable/gux-accordion/gux-accordion-section/gux-accordion-section.scss
@@ -107,6 +107,7 @@ section.gux-disabled {
     align-items: center;
     align-self: auto;
     margin-left: var(--gse-ui-accordion-header-gap);
+    line-height: 0;
     color: var(--gse-ui-accordion-header-default-foreground-chevronIcon-closed);
     transition: transform 0.5s ease;
     transform-origin: center;
